[tool.poetry]
name = "dvc_pull"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dependencies.dvc]
git = "https://github.com/iterative/dvc.git"
extras = ["gdrive"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
